# ghc-linking-segfault

./: README.md  cabal.project  default.nix  ghc-linking-segfault.cabal  shell.nix
nix/patches/: default.nix
